# tixer.dev

./: CNAME  LICENSE  README.md
back/: .gitignore  Cargo.toml  README.md
back/src/: auth.rs  main.rs  models.rs  state.rs
back/src/db/: error.rs  mod.rs  repository.rs  sqlite.rs
back/src/handlers/: ai.rs  health.rs  mod.rs  tags.rs  tasks.rs
docs/: 404.html  index.html  new.html  todo.html
docs/assets/: index-364ltLKj.js  index-53TGgRvn.css  index-B8P6UdwH.js  index-B9PyvVL_.js  index-BG0rZNLM.js  index-BGAeAmqq.css  index-BI9Tz_AY.js  index-BJozcgMO.js  index-BVIPKOii.css  index-BdX-EKcI.js  index-BjlvrW46.js  index-BpZlsY67.css  index-BtD1pm3K.js  index-BxlizU9g.js  index-By_3c92p.js  index-C-54C6C9.js  index-C0BBkrud.js  index-C72QapfO.js  index-CNY_PeIe.css  index-CTa8ggNz.css  index-CXZxC8DX.css  index-CZ4rHouA.css  index-CdQKeYop.js  index-CjwuBS2O.js  index-CkW7mwkg.css  index-CxEzhdVE.js  index-CxHRM77n.js  index-D17EAKKH.js  index-D7ZY02cD.css  index-DJqXxiy0.js  index-DUOf_iA_.css  index-DURfrZKT.css  index-DjedPCvb.css  index-DuUlHir5.js  index-Dv0bfoOo.css  index-Dx6Lt1Jp.css  index-GgXb5Baq.css  index-IowMyM8W.js  index-WKrRHiHR.js  index-fKKbC8P9.js  (+6 more)
docs/css/: glitch.css  hero.css  heroBackground.css  main.css
docs/js/: background.js  bubble.js  heroBackground.js  particles.js  shaders.js  style_selector.js  uploader.js
web/: .env.production  .gitignore  index.html  package.json  pnpm-lock.yaml  todo.html  tsconfig.json  vite.config.ts
web/public/: CNAME
web/src/: main.tsx  router.tsx  vite-env.d.ts
web/src/api/: ai.ts  client.ts  index.ts  tags.ts  tasks.ts
web/src/home/: main.ts
web/src/hooks/: index.ts  useAppState.ts  useAuthSync.ts  (+3 more)
worker/: .gitignore  package.json  pnpm-lock.yaml  schema.sql  tsconfig.json  wrangler.toml
worker/src/: auth.ts  db.ts  index.ts  types.ts
(+41 files in other folders)
