[package]
name = "back"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.5", features = ["cors"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }

# Async trait support
async-trait = "0.1"

# Error handling
thiserror = "2"

# Authentication
jsonwebtoken = "9"
reqwest = { version = "0.12", features = ["json"] }
once_cell = "1"

# Environment
dotenvy = "0.15"
